@@ -157,4 +157,100 @@
               position="before:win32-res,before:mac-res,before:symbian-res"/>
 
 
+
+    <!-- =============================================================== -->
+    <!--               "make install" and "make uninstall":              -->
+    <!-- =============================================================== -->
+
+    <template id="_installcmd">
+        <set var="__iprg">$(INSTALL_DATA)</set>
+        <set var="__uprg">$(UNINSTALL_DATA)</set>
+        <set var="__srcdir">$(SRCDIR)</set>
+        <set var="__dstdir"/>
+        <set var="__files"/>
+
+        <!--
+          DigitalMars' smake has problems with long command lines, so we
+          have to work around it. More details here:
+          http://sourceforge.net/mailarchive/message.php?msg_id=9595825
+          -->
+        <if cond="TOOLSET=='win32' and FORMAT=='dmars_smake'">
+            <set var="__copy_depends" eval="0">
+                $(''.join(['$(__srcdir)%s ' % (x) for x in __files.split()]))
+            </set>
+            <set var="__deps" append="1">$(__copy_depends)</set>
+            <set var="__copy_script_name">$(FORMAT)_copy_$(id).bat</set>
+        </if>
+            
+            
+        <!-- INSTALL COMMANDS -->
+
+        <set var="__install_cmd" eval="0">
+            <if cond="TOOLSET=='unix'">
+                $(INSTALL_DIR) $(__dstdir)
+                (cd $(__srcdir) ; $(__iprg) $(__files) $(__dstdir))
+            </if>
+            <if cond="TOOLSET=='win32'">
+                $(INSTALL_DIR) $(__dstdir)
+                ( cd $(__srcdir) &amp;&amp; $(__iprg) $(__files) $(__dstdir))
+            </if>
+        </set>
+        <set var="__install_cmd_preservetree" eval="0">
+            <if cond="TOOLSET=='unix'">
+                $(INSTALL_DIR) $(__dstdir)
+                for f in $(__files); do \
+                    if test ! -d $(__dstdir)/`dirname $(DOLLAR)$(DOLLAR)f` ; then \
+                        $(INSTALL_DIR) $(__dstdir)/`dirname $(DOLLAR)$(DOLLAR)f`; \
+                    fi; \
+                    $(__iprg) $(__srcdir)/$(DOLLAR)$(DOLLAR)f $(__dstdir)/$(DOLLAR)$(DOLLAR)f; \
+                done
+            </if>
+    
+            <!-- because of all win32/dos shell limitations we are forced to write
+                 a 'mkdir' command for any directory in the given __files list 
+                 (because we need to preserve directory tree and thus handle the 
+                 directories eventually specified as part of __files paths) and a 
+                 'copy' command for each file in __files list...
+            -->
+            <if cond="TOOLSET in ['win32','os2','dos']">
+                if not exist $(__dstdir) mkdir $(__dstdir)
+                $('\n'.join([('if not exist %s\%s mkdir %s\%s' % (__dstdir, x, __dstdir, x)) \
+                  for x in getDirsFromList(__files).split()]))
+                $('\n'.join([('copy %s %s' % ( \
+                    os.path.join(__srcdir, x), os.path.normpath(os.path.join(   \
+                                               __dstdir, os.path.dirname(x)) ))) \
+                    for x in __files.split()]))
+            </if>
+        </set>
+        
+        
+        <!-- UNINSTALL COMMANDS -->
+    
+        <set var="__uninstall_cmd_preservetree" eval="0">
+            <if cond="TOOLSET=='unix'">
+                for f in $(__files); do \
+                    $(__uprg) $(__dstdir)/$(DOLLAR)$(DOLLAR)f; \
+                done
+            </if>
+            <if cond="TOOLSET=='win32'">
+                <!-- in case __files is a list of files, we split all the tokens of the
+                     list and create single clean commands -->
+                $('\n'.join([('-if exist %s\%s %s %s\%s' % (__dstdir, x, __uprg, __dstdir, x)) \
+                  for x in safeSplit(__files)]))
+            </if>
+        </set>
+        <set var="__uninstall_cmd" eval="0">
+            <if cond="TOOLSET=='unix'">
+                $('(cd %s ; %s %s)' % (__dstdir, __uprg, ' '.join([os.path.basename(x) for x in safeSplit(__files)])))
+            </if>
+            <if cond="TOOLSET=='win32'">
+                <!-- in case __files is a list of files, we split all the tokens of the
+                     list and create single clean commands -->
+                $('\n'.join([('-if exist %s\%s %s %s' % (__dstdir, x, __uprg, x)) \
+                  for x in safeSplit(__files)]))
+            </if>
+        </set> 
+    </template>
+
+
 </makefile>
